# Z-Calling

./: CMakeLists.txt  LICENSE  README.md  Z-Calling.sh  environment.yml
corelib/: fasta.cpp  fasta.hpp  hbn_aux.c  hbn_aux.h  line_reader.cpp  line_reader.hpp  sam_batch.hpp  sam_parser.cpp  sam_parser.hpp  seq_name2id_map.hpp  unpacked_seqdb.hpp
example_data/: run_examples.sh
model/k11-mixed-AZ/: scripted_m11.pth
model/k21-full-ZA/: scripted_m21.pth
parameter/: parameters.hpp
py/: SVM_LR_analysis.py  filter_bam.py
scripts/: QV_statistics_and_making_graphs.py  Readme.md  VCF.stats.py  ZA_signal_feature_importance.py  ZA_signal_ttest_and_medianratio.py  base_error_proportions_Cohen_h.py  base_error_proportions_z-test.py  benchmark_models_gpu.py  extract_kinetics_signals.py  kinetics_stat.py  mlp_layer_benchmark.py  torch_mlp_shap_gpu.py  tsne_pca_analysis.py
str_util/: c_ncbi_blast_aux.c  ncbistr.hpp  ncbistr_util.cpp  ncbistr_util.hpp  numeric_str_interconv.hpp  str_cmp.cpp  str_cmp.hpp  str_util.cpp  str_util.hpp  tempstr.hpp
z-bam2txt/: CMakeLists.txt  bam_to_txt.cpp  bam_to_txt.mk  necat_info.cpp  sam_map_info.cpp  sam_map_info.hpp
z-calling-base/: CMakeLists.txt  build_mod_bam.cpp  build_mod_bam.hpp  main.cpp  main.mk  make_read_features.cpp  make_read_features.hpp  necat_info.cpp  necat_info.hpp
z-calling-read/: BamRead.cpp  BamRead.h  CMakeLists.txt  func.cpp  func.h  main.cpp
z-freq/: CMakeLists.txt  zfreq.cpp
z-seq/: CMakeLists.txt  main.cpp
